[gd_scene load_steps=32 format=3 uid="uid://bw3x0ddvicyea"]

[ext_resource type="Script" path="res://scenes/pause_menu_two.gd" id="1_aq26k"]
[ext_resource type="Texture2D" uid="uid://vvu15kb5fio5" path="res://textures/notebook_open_full.png" id="1_lxp7k"]
[ext_resource type="Texture2D" uid="uid://diljh8qyh1p5o" path="res://textures/notebook_pause_menu.png" id="2_2k2hw"]
[ext_resource type="Texture2D" uid="uid://cyyqcqnltqpcw" path="res://textures/notebook_open_right.png" id="2_lqkiw"]
[ext_resource type="Texture2D" uid="uid://dhd2caxult85s" path="res://textures/resume_normal.png" id="2_wih53"]
[ext_resource type="Texture2D" uid="uid://jvwite3nwet0" path="res://textures/notebook_map_open_right.png" id="2_wisyf"]
[ext_resource type="Texture2D" uid="uid://c86d7wdfd84g7" path="res://textures/resume_toggle.png" id="3_ta4ns"]
[ext_resource type="Texture2D" uid="uid://bhkwkp60phtb6" path="res://textures/notebook_open_left.png" id="4_lhdis"]
[ext_resource type="Texture2D" uid="uid://begow1ioms6kb" path="res://textures/quit_normal.png" id="5_hahlu"]
[ext_resource type="Script" path="res://scenes/resume.gd" id="5_y4pu0"]
[ext_resource type="Texture2D" uid="uid://d2h43sro3w2q5" path="res://textures/resume_pressed.png" id="5_yamx7"]
[ext_resource type="Texture2D" uid="uid://6as0vow0ag6t" path="res://textures/quit_toggle.png" id="6_8ti88"]
[ext_resource type="Texture2D" uid="uid://cftffxbi2ovn2" path="res://textures/map_normal.png" id="7_sd720"]
[ext_resource type="Texture2D" uid="uid://cp85jf1ynf2kc" path="res://textures/map_toggle.png" id="8_xlbwr"]
[ext_resource type="Texture2D" uid="uid://dmw38yw13i2co" path="res://textures/question.png" id="9_cseuw"]
[ext_resource type="Texture2D" uid="uid://fvsvayronwhp" path="res://textures/map_pressed.png" id="9_xui8h"]
[ext_resource type="Texture2D" uid="uid://bn0m8v60v770w" path="res://textures/notebook_map_open_full.png" id="12_45mya"]
[ext_resource type="Script" path="res://scenes/quit.gd" id="12_mjaf5"]
[ext_resource type="Texture2D" uid="uid://blok5k2fvw77k" path="res://textures/back_normal.png" id="13_3vhqn"]
[ext_resource type="Texture2D" uid="uid://b338bkhm6xexn" path="res://textures/quit_pressed.png" id="13_nvype"]
[ext_resource type="Texture2D" uid="uid://d2b5nv3em4rts" path="res://textures/back_toggle.png" id="14_x7vp3"]
[ext_resource type="Texture2D" uid="uid://eslc6fo56qxg" path="res://textures/notebook_map_open_left.png" id="15_8xt7x"]
[ext_resource type="Script" path="res://scenes/back.gd" id="18_1kweh"]
[ext_resource type="FontFile" uid="uid://cxco3lwv0bs5r" path="res://scenes/joystix monospace.otf" id="18_5skil"]
[ext_resource type="Texture2D" uid="uid://boardwho7nv41" path="res://textures/back_pressed.png" id="21_r8rg4"]

[sub_resource type="Animation" id="Animation_tky77"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("notebook_open_right:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(274, 1000)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("notebook_open_right/notebook_cover:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("notebook_open_right/notebook_cover:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("notebook_open_left:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("notebook_open_left:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("notebook_open_right:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("notebook_open_full:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("notebook_open_right:size")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1920, 1080)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("notebook_open_right/notebook_cover:size")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1920, 1080)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("notebook_map_open_right:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("notebook_map_open_left:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("notebook_map_open_left:scale")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2.38419e-06, 1)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("notebook_open_right:scale")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/13/type = "value"
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/path = NodePath("notebook_map_open_full:visible")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8ci8q"]
resource_name = "map_to_menu"
length = 0.70001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("notebook_map_open_full:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("notebook_map_open_left:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("notebook_map_open_right:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("notebook_map_open_left:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("notebook_open_right:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3, 0.7),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("notebook_open_right:scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1), Vector2(1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("notebook_open_left:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("notebook_open_full:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="Animation" id="Animation_gr2ph"]
resource_name = "notebook_closing"
length = 1.40001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("notebook_open_right:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("notebook_open_full:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("notebook_open_left:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("notebook_open_left:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("notebook_open_right:position")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.5, 0.8, 1.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(274, 0), Vector2(274, -100), Vector2(274, 1000)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("notebook_open_right/notebook_cover:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("notebook_open_right/notebook_cover:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.2, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-2.38419e-06, 1), Vector2(1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("notebook_map_open_full:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("notebook_open_right:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_h00ba"]
resource_name = "notebook_opening"
length = 1.40001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("notebook_open_right:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(274, 1000), Vector2(274, -100), Vector2(274, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("notebook_open_right/notebook_cover:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.7, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(-2.38419e-06, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("notebook_open_right/notebook_cover:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("notebook_open_left:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.9, 1.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("notebook_open_left:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.9, 1.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1), Vector2(1, 1)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("notebook_open_right:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("notebook_open_full:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 1.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("notebook_map_open_full:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("notebook_open_right:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_ecp0h"]
resource_name = "turn_to_map"
length = 0.70001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("notebook_open_full:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("notebook_open_right:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("notebook_open_left:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("notebook_map_open_right:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("notebook_open_right:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(274, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("notebook_open_right/notebook_cover:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("notebook_open_right/notebook_cover:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-2.38419e-06, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("notebook_open_left:scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("notebook_open_right:scale")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1e-05, 1)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("notebook_map_open_left:scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0.3, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-2.38419e-06, 1), Vector2(1, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("notebook_map_open_left:visible")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0.3, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("notebook_map_open_full:visible")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0yloc"]
_data = {
"RESET": SubResource("Animation_tky77"),
"map_to_menu": SubResource("Animation_8ci8q"),
"notebook_closing": SubResource("Animation_gr2ph"),
"notebook_opening": SubResource("Animation_h00ba"),
"turn_to_map": SubResource("Animation_ecp0h")
}

[node name="pause_menu_two" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aq26k")

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
self_modulate = Color(1, 1, 1, 0.290196)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="notebook_map_open_right" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 299.0
offset_right = 299.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wisyf")
stretch_mode = 5

[node name="notebook_open_full" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_lxp7k")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="notebook_open_full"]
layout_mode = 0
offset_left = 1038.0
offset_top = 175.0
offset_right = 1174.0
offset_bottom = 303.0
scale = Vector2(3.06749, 3.73432)

[node name="resume" type="TextureButton" parent="notebook_open_full/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_bottom = NodePath("../map")
mouse_default_cursor_shape = 2
texture_normal = ExtResource("2_wih53")
texture_pressed = ExtResource("5_yamx7")
texture_hover = ExtResource("3_ta4ns")
texture_focused = ExtResource("3_ta4ns")
script = ExtResource("5_y4pu0")

[node name="map" type="TextureButton" parent="notebook_open_full/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../resume")
focus_neighbor_bottom = NodePath("../quit")
mouse_default_cursor_shape = 2
disabled = true
texture_normal = ExtResource("7_sd720")
texture_pressed = ExtResource("9_xui8h")
texture_hover = ExtResource("8_xlbwr")
texture_disabled = ExtResource("9_cseuw")
texture_focused = ExtResource("8_xlbwr")

[node name="quit" type="TextureButton" parent="notebook_open_full/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../map")
mouse_default_cursor_shape = 2
texture_normal = ExtResource("5_hahlu")
texture_pressed = ExtResource("13_nvype")
texture_hover = ExtResource("6_8ti88")
texture_focused = ExtResource("6_8ti88")
script = ExtResource("12_mjaf5")

[node name="notebook_open_left" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -245.0
offset_right = -245.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1)
pivot_offset = Vector2(1226, 493)
texture = ExtResource("4_lhdis")
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0yloc")
}

[node name="notebook_open_right" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 274.0
offset_top = 1000.0
offset_right = 274.0
offset_bottom = 1000.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(665, 561)
texture = ExtResource("2_lqkiw")
stretch_mode = 5

[node name="notebook_cover" type="TextureRect" parent="notebook_open_right"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(666, 560)
texture = ExtResource("2_2k2hw")
stretch_mode = 5

[node name="notebook_map_open_full" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_45mya")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="notebook_map_open_full"]
layout_mode = 0
offset_left = 401.0
offset_top = 791.0
offset_right = 529.0
offset_bottom = 831.0
scale = Vector2(3.16, 3.16)

[node name="back" type="TextureButton" parent="notebook_map_open_full/VBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("13_3vhqn")
texture_pressed = ExtResource("21_r8rg4")
texture_hover = ExtResource("14_x7vp3")
texture_focused = ExtResource("14_x7vp3")
script = ExtResource("18_1kweh")

[node name="ColorRect" type="ColorRect" parent="notebook_map_open_full"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 914.0
offset_top = 557.0
offset_right = 1296.0
offset_bottom = 951.0
scale = Vector2(-0.1, -0.096)
mouse_filter = 1
color = Color(1, 0, 0, 1)

[node name="barleys_office" type="RichTextLabel" parent="notebook_map_open_full"]
layout_mode = 0
offset_left = 793.0
offset_top = 487.0
offset_right = 1000.0
offset_bottom = 516.0
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
theme_override_fonts/normal_font = ExtResource("18_5skil")
text = "Barley's office"

[node name="notebook_map_open_left" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -245.0
offset_right = -245.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(-2.38419e-06, 1)
pivot_offset = Vector2(1226, 574)
texture = ExtResource("15_8xt7x")
stretch_mode = 5

[connection signal="visibility_changed" from="notebook_open_full" to="notebook_open_full/VBoxContainer/resume" method="_on_notebook_open_full_visibility_changed"]
[connection signal="pressed" from="notebook_open_full/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="notebook_open_full/VBoxContainer/map" to="." method="_on_map_pressed"]
[connection signal="pressed" from="notebook_open_full/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="visibility_changed" from="notebook_map_open_full" to="notebook_map_open_full/VBoxContainer/back" method="_on_notebook_map_open_full_visibility_changed"]
[connection signal="pressed" from="notebook_map_open_full/VBoxContainer/back" to="." method="_on_back_pressed"]
[connection signal="mouse_entered" from="notebook_map_open_full/ColorRect" to="." method="_on_color_rect_mouse_entered"]
[connection signal="mouse_exited" from="notebook_map_open_full/ColorRect" to="." method="_on_color_rect_mouse_exited"]
